fix: main height and don't centre on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,10 +36,6 @@
   font-style: normal;
   font-display: swap;
 }
-.center {
-  text-align: center;
-}
-
 .hide-sm,
 .hide-lg {
   display: none;
@@ -54,7 +50,17 @@
   .hide-sm {
     display: block;
   }
+
+  .center {
+    text-align: center;
+  }
 }
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 html {
   color: #404040;
   background-color: #f4f4f4;
@@ -68,10 +74,8 @@ html {
   font-smoothing: antialiased;
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
+main {
+  min-height: calc(100vh - 234px);
 }
 
 img,
